第1回のノートブックを微修正

--- a/01-forward-prop/nn_from_scratch_without_numpy.ipynb
+++ b/01-forward-prop/nn_from_scratch_without_numpy.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOxudl+ZEu8qf24gkEjEWEB",
+      "authorship_tag": "ABX9TyPDhYPBT/cYUcx1mALWBTXJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,16 +75,16 @@
       "source": [
         "<table valign=\"middle\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://atmarkit.itmedia.co.jp/ait/subtop/features/di/neuralnetwork_index.html\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/manabu.svg\"/>Deep Insiderで記事を読む</a>\n",
+        "    <a target=\"_blank\" href=\"https://atmarkit.itmedia.co.jp/ait/articles/2202/09/news027.html\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/manabu.svg\"/>Deep Insiderで記事を読む</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/isshiki/neural-network-by-code/tree/main/01-forward-prop/nn_from_scratch_without_numpy.ipynb\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/gcolab.svg\" />Google Colabで実行する</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/isshiki/neural-network-by-code/blob/main/01-forward-prop/nn_from_scratch_without_numpy.ipynb\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/gcolab.svg\" />Google Colabで実行する</a>\n",
         "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://studiolab.sagemaker.aws/import/github/isshiki/neural-network-by-code/tree/main/01-forward-prop/nn_from_scratch_without_numpy.ipynb\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/astudiolab.svg\" />AWS  SageMaker Studio Labで実行する</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/isshiki/neural-network-by-code/tree/main/01-forward-prop/nn_from_scratch_without_numpy.ipynb\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/github.svg\" />GitHubでソースコードを見る</a>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/isshiki/neural-network-by-code/blob/main/01-forward-prop/nn_from_scratch_without_numpy.ipynb\"> <img src=\"https://re.deepinsider.jp/img/ml-logo/github.svg\" />GitHubでソースコードを見る</a>\n",
         "  </td>\n",
         "</table>"
       ],
@@ -126,8 +126,7 @@
         "- 基本的に掛け算や足し算などの中学までの数学のみで、ニューラルネットのロジックをコーディングしていきます。\n",
         "- ※微分の導関数は、そのままコードとして記載することで、微分の計算は取り上げません。\n",
         "\n",
-        "![図1　線形代数は使わないことによるメリット](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/01.png)  \n",
-        "図1　線形代数は使わないことによるメリット"
+        "![図1　線形代数を使わないことによるメリット](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/01.png)"
       ],
       "metadata": {
         "id": "8X8ZSGoFxciU"
@@ -147,7 +146,7 @@
       "source": [
         "基本的なニューラルネット（この例では、入力層：2、隠れ層：3、出力層：1）の図を確認しておきます。\n",
         "\n",
-        "![図2　ニューラルネットワークの図（左：通常、右：本ノートブック）](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/02.png)"
+        "![図2　ニューラルネットワークの図（左：横描き、右：縦描き）](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/02.png)"
       ],
       "metadata": {
         "id": "0dKydpNZydl4"
@@ -174,7 +173,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 取りあえず空の関数を定義して、コードが実行できるようにしておく\n",
+        "# 取りあえず仮で、空の関数を定義して、コードが実行できるようにしておく\n",
         "def forward_prop(cache_mode=False):\n",
         "    \" 順伝播を行う関数。\"\n",
         "    return None, None, None\n",
@@ -184,7 +183,7 @@
         "    \" 逆伝播を行う関数。\"\n",
         "    return None, None\n",
         "\n",
-        "LEARNING_RATE = 0.1 # 学習率\n",
+        "LEARNING_RATE = 0.1 # 学習率（lr）\n",
         "def update_params(grads_w, grads_b, lr=0.1):\n",
         "    \" パラメーター（重みとバイアス）を更新する関数。\"\n",
         "    return None, None\n",
@@ -267,7 +266,7 @@
         "# モデルを定義\n",
         "model = (layers, weights, biases)\n",
         "\n",
-        "# 仮の訓練データ（1行分）を準備\n",
+        "# 仮の訓練データ（1件分）を準備\n",
         "x = [0.05, 0.1]  # x_1とx_2の2つの特徴量"
       ],
       "metadata": {
@@ -297,7 +296,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 取りあえず空の関数を定義して、コードが実行できるようにしておく\n",
+        "# 取りあえず仮で、空の関数を定義して、コードが実行できるようにしておく\n",
         "def summation(x,weights, bias):\n",
         "    \" 重み付き線形和の関数。\"\n",
         "    return 0.0\n",
@@ -351,7 +350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![図4　訓練（学習）処理を示したニューラルネットワーク図](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/04.png)"
+        "![図4　1つのニューロンにおける順伝播の処理を示した図](https://raw.githubusercontent.com/isshiki/neural-network-by-code/main/01-forward-prop/images/04.png)"
       ],
       "metadata": {
         "id": "V7DKfcYyPf1U"
@@ -391,7 +390,7 @@
         "    \"\"\"\n",
         "    linear_sum = 0.0\n",
         "    for x_i, w_i in zip(x, weights):\n",
-        "        linear_sum += x_i * w_i  # iは番号の意味（数学は基本的に1スタート）\n",
+        "        linear_sum += x_i * w_i  # iは「番号」（数学は基本的に1スタート）\n",
         "        # print(f'x_i({x_i})×w_i({w_i})＋', end='')\n",
         "    linear_sum += bias\n",
         "    # print(f'b({bias})', end='')\n",
@@ -434,7 +433,7 @@
         "    \"\"\"    \n",
         "    if with_respect_to == 'w':\n",
         "        return x  # 線形和uを各重みw_iで偏微分するとx_iになる（iはノード番号）。\n",
-        "    if with_respect_to == 'b':\n",
+        "    elif with_respect_to == 'b':\n",
         "        return 1.0  # 線形和uをバイアスbで偏微分すると1になる。\n",
         "    elif with_respect_to == 'x':\n",
         "        return weights  # 線形和uを各入力x_iで偏微分するとw_iになる。"
@@ -606,7 +605,6 @@
         "\n",
         "    # まずは、入力層を順伝播する\n",
         "    # print(f'■第1層（入力層）-全て（{len(x)}個）の特徴量：')\n",
-        "    outs = x  # \n",
         "    # print(f'　●入力データ： ', end='')\n",
         "    cached_outs.append(x)  # 何も処理せずに出力値を記録\n",
         "    # print(f'何もしない＝out({x})')\n",
@@ -616,12 +614,12 @@
         "    SKIP_INPUT_LAYER = 1\n",
         "    for layer_i, layer in enumerate(layers):  # 各層を処理\n",
         "        if layer_i == 0:\n",
-        "            continue  # 上で処理済み\n",
+        "            continue  # 入力層は上で処理済み\n",
         "\n",
         "        # 各レイヤーのノードごとに処理を行う\n",
         "        sums = []\n",
         "        outs = []\n",
-        "        for node_i in range(layer):  # 層の中のノードを処理\n",
+        "        for node_i in range(layer):  # 層の中の各ノードを処理\n",
         "            # print(f'■第{layer_i+1}層-第{node_i+1}ノード：')\n",
         "\n",
         "            # ノードごとの重みとバイアスを取得\n",
@@ -634,7 +632,7 @@
         "            # print(f'＝sum({node_sum})')\n",
         "\n",
         "            # 1つのノードの処理（2）： 活性化関数\n",
-        "            if layer_i < len(layers)-SKIP_INPUT_LAYER:\n",
+        "            if layer_i < len(layers)-1:  # -1は出力層以外の意味\n",
         "                # 隠れ層（シグモイド関数）\n",
         "                # print(f'　●活性化関数（隠れ層はシグモイド関数）： ', end='')\n",
         "                node_out = sigmoid(node_sum)\n",
@@ -688,7 +686,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 記事にはないが。別の計算パターンでもチェックしてみよう\n",
+        "# 記事にはないが、別の計算パターンでもチェックしてみよう\n",
         "x3 = [0.05, 0.1]\n",
         "layers3 = [2, 2, 2]\n",
         "weights3 = [\n",
@@ -761,19 +759,19 @@
         "# 重みとバイアスの初期値\n",
         "weights2 = [\n",
         "    [[-0.2, 0.4], [-0.4, -0.5], [-0.4, -0.5]], # 入力層→隠れ層1\n",
-        "    [[-0.2, 0.4, 0.9], [-0.4, -0.5, -0.2]], # 入力層→隠れ層1\n",
-        "    [[-0.5, 1.0]] # 隠れ層1→出力層\n",
+        "    [[-0.2, 0.4, 0.9], [-0.4, -0.5, -0.2]], # 隠れ層1→隠れ層2\n",
+        "    [[-0.5, 1.0]] # 隠れ層2→出力層\n",
         "]\n",
         "biases2 = [\n",
         "    [0.1, -0.1, 0.1],  # 隠れ層1\n",
-        "    [0.2, -0.2],  # 隠れ層1\n",
+        "    [0.2, -0.2],  # 隠れ層2\n",
         "    [0.3]  # 出力層\n",
         "]\n",
         "\n",
         "# モデルを定義\n",
         "model2 = (layers2, weights2, biases2)\n",
         "\n",
-        "# 仮の訓練データ（1行分）を準備\n",
+        "# 仮の訓練データ（1件分）を準備\n",
         "x2 = [2.3, 1.5]  # x_1とx_2の2つの特徴量\n",
         "\n",
         "# 予測時の（1）順伝播の実行例\n",
