第1回のノートブックのtypo修正

--- a/01-forward-prop/nn_from_scratch_without_numpy.ipynb
+++ b/01-forward-prop/nn_from_scratch_without_numpy.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPDhYPBT/cYUcx1mALWBTXJ",
+      "authorship_tag": "ABX9TyMdeRwUHFCuKIaw/vpiGSzi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
         "ニューラルネットの訓練に必要なことは、以下の3つだけ。\n",
         "\n",
         "1. **順伝播：** `forward_prop()◎`数として実装\n",
-        "2. **逆伝播：** `back_prop()`関数として実装\n",
+        "2. **逆伝播：** `back_prop()`関数として実装。損失（予測と正解の誤差）の計算はここで行う\n",
         "3. **パラメーター（重みとバイアス）の更新：** `update_params()`関数として実装。これによりモデルが**最適化**される\n"
       ],
       "metadata": {
@@ -386,7 +386,7 @@
         "    weights： 重みをリスト値（各要素はfloat値）で指定する。\n",
         "    bias： バイアスをfloat値で指定する。\n",
         "    - 戻り値：\n",
-        "    線形和の計算結果をfloat値で返す。。\n",
+        "    線形和の計算結果をfloat値で返す。\n",
         "    \"\"\"\n",
         "    linear_sum = 0.0\n",
         "    for x_i, w_i in zip(x, weights):\n",
@@ -429,7 +429,7 @@
         "        'w'＝ 重み、'b'＝ バイアス、'x'＝ 入力。\n",
         "    - 戻り値：\n",
         "    with_respect_toが'w'や'x'の場合はリスト値で、'b'の場合はfloat値で\n",
-        "        線形和の偏微分の計算結果（微分係数）を返す。\n",
+        "        線形和の偏微分の計算結果（偏微分係数）を返す。\n",
         "    \"\"\"    \n",
         "    if with_respect_to == 'w':\n",
         "        return x  # 線形和uを各重みw_iで偏微分するとx_iになる（iはノード番号）。\n",
@@ -713,7 +713,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ここまでのコード中に仕込んでいる`print()`関数を（※全てコメントアウトしています）のコメントを解除すると、以下のように途中の計算内容が順番にテキスト出力されます。計算内容の検証用の機能です。"
+        "ここまでのコード中に仕込んでいる`print()`関数（※全てコメントアウトしています）のコメントを解除すると、以下のように途中の計算内容が順番にテキスト出力されます。計算内容の検証用の機能です。"
       ],
       "metadata": {
         "id": "9wOPPW0YVcH7"
