Colaboratory を使用して作成しました

--- a/04-linear-algebra/nn_from_scratch_with_numpy.ipynb
+++ b/04-linear-algebra/nn_from_scratch_with_numpy.ipynb
@@ -474,7 +474,7 @@
         "b_1  \\\\\n",
         "b_2  \\\\\n",
         "\\vdots  \\\\\n",
-        "x_n\n",
+        "b_n\n",
         "\\end{array}\n",
         "\\right)$ のようなベクトル\n",
         "\n",
@@ -1322,7 +1322,7 @@
         "\\begin{align}\n",
         "\\frac{\\partial L}{\\partial w_{ij}} &= \\frac{\\partial L}{\\partial z_j}\\frac{\\partial z_j}{\\partial u_j}\\frac{\\partial u_j}{\\partial w_{ij}}  \\\\\n",
         "\\frac{\\partial L}{\\partial b_{j}} &= \\frac{\\partial L}{\\partial z_j}\\frac{\\partial z_j}{\\partial u_j}\\frac{\\partial u_j}{\\partial b_{j}} \\\\\n",
-        "\\frac{\\partial L}{\\partial x_{i}} &=  \\sum_{i=1}^{n}(\\frac{\\partial L}{\\partial z_j}\\frac{\\partial z_j}{\\partial u_j}\\frac{\\partial u_j}{\\partial x_{i}})\n",
+        "\\frac{\\partial L}{\\partial x_{i}} &=  \\sum_{j=1}^{n}(\\frac{\\partial L}{\\partial z_j}\\frac{\\partial z_j}{\\partial u_j}\\frac{\\partial u_j}{\\partial x_{i}})\n",
         "\\end{align}\n",
         "$$\n"
       ],
@@ -1352,7 +1352,7 @@
         "\\begin{align}\n",
         "\\frac{\\partial L}{\\partial w_{ij}} &= \\delta_j\\frac{\\partial u_j}{\\partial w_{ij}}  \\\\\n",
         "\\frac{\\partial L}{\\partial b_{j}} &= \\delta_j\\frac{\\partial u_j}{\\partial b_{j}} \\\\\n",
-        "\\frac{\\partial L}{\\partial x_{i}} &=  \\sum_{i=1}^{n}(\\delta_j\\frac{\\partial u_j}{\\partial x_{i}})\n",
+        "\\frac{\\partial L}{\\partial x_{i}} &=  \\sum_{j=1}^{n}(\\delta_j\\frac{\\partial u_j}{\\partial x_{i}})\n",
         "\\end{align}\n",
         "$$"
       ],
