Colaboratory を使用して作成しました

--- a/01-forward-prop/nn_from_scratch_without_numpy.ipynb
+++ b/01-forward-prop/nn_from_scratch_without_numpy.ipynb
@@ -1175,7 +1175,7 @@
         "# ---ここまでは仮の実装。ここからが必要な実装---\n",
         "\n",
         "w = weights[layer_i - SKIP_INPUT_LAYER][node_i]\n",
-        "b = biases[layer_i - SKIP_INPUT_LAYER]\n",
+        "b = biases[layer_i - SKIP_INPUT_LAYER][node_i]\n",
         "x = cached_outs[layer_i - PREV_LAYER]  # 前の層の出力（out）＝今の層への入力（x）\n",
         "sum_der_w = sum_der(x, w, b, with_respect_to='w')\n",
         "sum_der_b = sum_der(x, w, b, with_respect_to='b')\n",
@@ -1392,7 +1392,7 @@
         "\n",
         "            # （3）線形和を重み／バイアス／入力で偏微分\n",
         "            w = weights[layer_i - SKIP_INPUT_LAYER][node_i]\n",
-        "            b = biases[layer_i - SKIP_INPUT_LAYER]\n",
+        "            b = biases[layer_i - SKIP_INPUT_LAYER][node_i]\n",
         "            x = cached_outs[layer_i - PREV_LAYER]  # 前の層の出力＝今の層への入力\n",
         "            sum_der_w = sum_der(x, w, b, with_respect_to='w')\n",
         "            sum_der_b = sum_der(x, w, b, with_respect_to='b')\n",
